// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputTextExtended renders int text multiline correctly 1`] = `
<div
  id="input3"
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      id="__ac-1ae6a039-fd15-48cb-b50a-23e918ab25ae"
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-TextField ms-TextField--multiline root-41"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-52"
          >
            <textarea
              aria-invalid="false"
              class="ms-TextField-field field-53"
              id="input3"
              maxlength="500"
              placeholder="enter comment"
              type="text"
            >
              This value was pre-filled
            </textarea>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputTextExtended renders int text single line correctly 1`] = `
<div
  id="input3"
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      id="__ac-5db310e8-81e0-4e06-8376-808c494c3faf"
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-TextField root-41"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-42"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-43"
              id="input3"
              maxlength="500"
              placeholder="enter comment"
              type="text"
              value="This value was pre-filled"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputTextExtended renders text box with inline action correctly 1`] = `
<div
  id="input3"
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      id="__ac-0bd1fea5-a7e4-4c59-91a6-d8b5f6ebb617"
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-TextField root-41"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-42"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-43"
              id="input3"
              maxlength="500"
              placeholder="enter comment"
              type="text"
              value="This value was pre-filled"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
